refactor(/service/):  PostService class and add createBlog method and pagination